[package]
name = "twabbit"
description = "(Thao)Wabbit Compiler - A Compiler for the Wabbit Programming Language by David Beazley"
version = "0.1.0"
edition = "2021"
authors = ["Thao D <ardtimeit@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
once_cell = "1.18.0"
thiserror = "2.0.11"
# typed-arena = "2.0"
